--- a/css/screen.scss
+++ b/css/screen.scss
@@ -50,3 +50,19 @@ $img-location: '{{ site.baseurl }}/img/icon-location';
         "layout",
         "modules"
 ;
+
+pre, code {
+  background: #f5f5f5;
+  border-radius: 4px;
+  border: 1px solid #e0e0e0;
+  padding: 0.2em 0.4em;
+  font-family: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  font-size: 0.97em;
+  color: #333;
+}
+
+pre {
+  padding: 1em;
+  overflow-x: auto;
+  margin-bottom: 1.5em;
+}
